--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     compileSdk 31
-    buildToolsVersion "33.0.0-rc2"
+    buildToolsVersion "33.0.0-rc3"
 
     defaultConfig {
         applicationId "com.brc.studybuddy"
@@ -91,4 +91,7 @@ dependencies {
 
     // Facebook SDK
     implementation 'com.facebook.android:facebook-login:latest.release'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
