--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id("com.apollographql.apollo3").version("3.6.0")
+}
+
+apollo {
+    packageName.set("com.brc.studybuddy")
 }
 
 android {
@@ -96,4 +101,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
+
+
+    // Apollo (GraphQl)
+    implementation("com.apollographql.apollo3:apollo-runtime:3.6.0")
 }
