--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,7 +102,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
 
-
     // Apollo (GraphQl)
     implementation("com.apollographql.apollo3:apollo-runtime:3.6.0")
+
+    // Datastore Preferences
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+
 }
